setting page working

--- a/src/pages/settings/scss/Settings.css
+++ b/src/pages/settings/scss/Settings.css
@@ -234,6 +234,7 @@ li {
   margin-top: 27px;
 }
 .main-listing-container .menu-list ul .settings-nav {
+  border-radius: 5px;
   background-color: #f2f9e4;
   display: flex;
   justify-content: space-between;
@@ -331,4 +332,21 @@ li {
   position: absolute;
   top: 35px;
   right: 10px;
+}
+.main-container-settings .weightage-list-container {
+  margin: 20px;
+  display: flex;
+  gap: 20px;
+}
+.main-container-settings .weightage-list-container .weightage-card {
+  max-width: 200px;
+  width: 100%;
+  background: #d3f9cd;
+  padding: 20px;
+  border-radius: 10px;
+}
+.main-container-settings .weightage-list-container .weightage-card .weightage-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=Settings.css.map */
