react query implemented and fixed console errors

--- a/src/pages/applications/scss/css/Applications.css
+++ b/src/pages/applications/scss/css/Applications.css
@@ -272,6 +272,7 @@ body .container .application-full-container .application-inner-container {
   padding: 20px;
 }
 body .container .application-full-container .application-inner-container .search-container {
+  justify-content: space-between;
   position: relative;
   width: 100%;
   padding-bottom: 5px;
