--- a/src/pages/applications/scss/Applications.scss
+++ b/src/pages/applications/scss/Applications.scss
@@ -334,6 +334,7 @@ body {
       .application-inner-container {
         padding: 20px;
         .search-container {
+          justify-content: space-between;
           position: relative;
           width: 100%;
           padding-bottom: 5px;
