application form worked

--- a/src/pages/applicationForm/scss/ApplicationForm.scss
+++ b/src/pages/applicationForm/scss/ApplicationForm.scss
@@ -291,7 +291,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -319,7 +319,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -346,7 +346,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -379,7 +379,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -409,7 +409,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -443,7 +443,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -471,7 +471,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -498,7 +498,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -531,7 +531,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -559,7 +559,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -586,7 +586,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -619,7 +619,7 @@ li {
                   color: $font-secondary-color;
 
                   span {
-                    color: red;
+                    color: $error-message;
                   }
                 }
 
@@ -648,7 +648,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
@@ -675,7 +675,7 @@ li {
                 width: 268px;
 
                 span {
-                  color: red;
+                  color: $error-message;
                 }
 
                 input {
