--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,6 +131,8 @@ li {
 
 .btn.primary-medium-icon {
   background-color: $primary-color;
+  display: flex;
+  align-items: center;
   color: #ffff;
   cursor: pointer;
   font-weight: 500;
